// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component FixRecord should render fix record form 1`] = `
<div>
  <div
    class="MuiGrid-root MuiGrid-container StandardPage css-11lq3yg-MuiGrid-root"
  >
    <div
      class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-true css-1vd824g-MuiGrid-root"
    >
      <h2
        class="MuiTypography-root MuiTypography-body1 css-v2c8i0-MuiTypography-root"
        data-analyticsid="page-title"
        data-testid="page-title"
        id="page-title"
      >
        Request a correction, add more information or upload files
      </h2>
    </div>
    <div
      class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 css-1idn90j-MuiGrid-root"
    />
    <div
      class="MuiGrid-root MuiGrid-item css-1guqyqn-MuiGrid-root"
    >
      <form>
        <div
          class="MuiGrid2-root MuiGrid2-container MuiGrid2-direction-xs-row MuiGrid2-spacing-xs-3 css-dkd71f-MuiGrid2-root"
        >
          <div
            class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-xs-12 css-16fnxy3-MuiGrid2-root"
          >
            <div
              class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root StandardCard css-985319-MuiPaper-root-MuiCard-root"
              data-testid="standard-card-work-to-be-amended"
              id="standard-card-work-to-be-amended"
            >
              <div
                class="MuiCardHeader-root css-16c6n48-MuiCardHeader-root"
              >
                <div
                  class="MuiCardHeader-content css-1qbkelo-MuiCardHeader-content"
                >
                  <h3
                    class="MuiTypography-root MuiTypography-h5 MuiCardHeader-title css-1hzv55z-MuiTypography-root"
                    data-testid="standard-card-work-to-be-amended-header"
                    id="standard-card-work-to-be-amended-header"
                  >
                    Work to be amended
                  </h3>
                </div>
              </div>
              <div
                class="MuiCardContent-root css-46bh2p-MuiCardContent-root"
                data-analyticsid="standard-card-work-to-be-amended-content"
                data-testid="standard-card-work-to-be-amended-content"
                id="standard-card-work-to-be-amended-content"
              >
                <div
                  class="publicationCitation"
                >
                  <div
                    class="css-0"
                    data-testid="publication-citation-parent-UQ:41878"
                    id="publication-citation-parent-UQ:41878"
                  >
                    <div
                      class="MuiGrid-root MuiGrid-container css-11lq3yg-MuiGrid-root"
                    >
                      <div
                        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-true css-1vd824g-MuiGrid-root"
                      >
                        <div
                          class="MuiGrid-root MuiGrid-container css-11lq3yg-MuiGrid-root"
                        >
                          <div
                            class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-true css-1vd824g-MuiGrid-root"
                            style="min-width: 1px;"
                          >
                            <h6
                              class="MuiTypography-root MuiTypography-h6 PublicationCitation-citationTitle css-nleb5q-MuiTypography-root"
                            >
                              <a
                                href="/view/UQ:41878"
                              >
                                Roles of heterogeneous nuclear ribonucleoproteins A/B in cell growth
                              </a>
                            </h6>
                          </div>
                          <div
                            class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 css-1ixyqi5-MuiGrid-root"
                          >
                            <div
                              class="citationContent citationJournalArticle"
                            >
                              <span
                                class="citationAuthors"
                              >
                                
                                <span
                                  class="citationAuthor"
                                  data-testid="rek-author-0"
                                >
                                  
                                  Brown, M. A.
                                  
                                </span>
                                , 
                                
                                <span
                                  class="citationAuthor"
                                  data-testid="rek-author-1"
                                >
                                  
                                  He, Y.
                                  
                                </span>
                                , 
                                
                                <span
                                  class="citationAuthor"
                                  data-testid="rek-author-2"
                                >
                                  
                                  Rothnagel, J. A.
                                  
                                </span>
                                , 
                                
                                <span
                                  class="citationAuthor"
                                  data-testid="rek-author-3"
                                >
                                  
                                  Saunders, N. A.
                                  
                                </span>
                                , 
                                 and 
                                <span
                                  class="citationAuthor"
                                  data-testid="rek-author-4"
                                >
                                  
                                  Smith, R.
                                  
                                </span>
                                
                                 
                              </span>
                              <span
                                class="citationDate"
                              >
                                (
                                2004
                                ).
                              </span>
                              <span
                                class="citationTitle"
                              >
                                 
                                Roles of heterogeneous nuclear ribonucleoproteins A/B in cell growth
                                .
                              </span>
                              <span
                                class="citationJournalName"
                              >
                                 
                                Molecular Biology of The Cell
                                 
                              </span>
                              <span
                                class="citationVolumeNumber"
                              >
                                 
                                15
                                 
                              </span>
                              <span
                                class="citationIssueNumber empty"
                              />
                              <span
                                class="citationArticleNumber empty"
                              />
                              <span
                                class="citationPageRange"
                              >
                                
                                <span
                                  class="citationStartPage"
                                >
                                  252A
                                </span>
                                -
                                <span
                                  class="citationEndPage"
                                >
                                  253A
                                </span>
                                
                              </span>
                              <span>
                                . 
                              </span>
                              <span
                                class="citationDOI empty"
                              />
                            </div>
                          </div>
                          <div
                            class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 css-1idn90j-MuiGrid-root"
                          >
                            <div
                              class="MuiGrid-root MuiGrid-container css-1vam7s3-MuiGrid-root"
                            >
                              <div
                                class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-auto css-1lugyxr-MuiGrid-root"
                              >
                                <div
                                  class="MuiGrid-root MuiGrid-container css-11lq3yg-MuiGrid-root"
                                >
                                  <div
                                    class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-auto css-pr9bjb-MuiGrid-root"
                                  >
                                    <a
                                      aria-label="Full citation in Web of science will open in a new window"
                                      class="wosCitationCount css-si3g8d"
                                      data-analyticsid="citation-count-link"
                                      data-testid="citation-count-link"
                                      href="https://www.webofknowledge.com/?auth=ShibbolethIdPForm&entityID=https://idp.uq.edu.au/entity&ShibFederation=OpenAthensFederation&DestApp=WOS&target=https%253A%252F%252Fwww.webofscience.com%252Fapi%252Fgateway%253FGWVersion%253D2%2526SrcAuth%253Duqueensland%2526SrcApp%253Dresolve1%2526DestLinkType%253DFullRecord%2526DestApp%253DWOS_CPL%2526KeyUT%253D000224648802120"
                                      id="citation-count-link"
                                      rel="noopener noreferrer"
                                      tabindex="0"
                                      target="_blank"
                                      title="Full citation in Web of science will open in a new window"
                                    >
                                      <span
                                        class="fez-icon wos large"
                                      />
                                      <span
                                        class="MuiBox-root css-19k1sqg"
                                      >
                                        2
                                      </span>
                                    </a>
                                    <a
                                      aria-label="Full citation in Google scholar will open in a new window"
                                      class="googleCitationCount css-si3g8d"
                                      data-analyticsid="citation-count-link"
                                      data-testid="citation-count-link"
                                      href="https://scholar.google.com/scholar?q=intitle:Roles%20of%20heterogeneous%20nuclear%20ribonucleoproteins%20A/B%20in%20cell%20growth"
                                      id="citation-count-link"
                                      rel="noopener noreferrer"
                                      tabindex="0"
                                      target="_blank"
                                      title="Full citation in Google scholar will open in a new window"
                                    >
                                      <span
                                        class="fez-icon google large"
                                      />
                                    </a>
                                    <span
                                      class="noOaIcon"
                                      data-testid="oa-n/a-icon"
                                    />
                                  </div>
                                  <div
                                    class="MuiGrid-root MuiGrid-item css-13i4rnv-MuiGrid-root"
                                  />
                                  <div
                                    class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-true css-j9fe35-MuiGrid-root"
                                  />
                                </div>
                              </div>
                            </div>
                          </div>
                        </div>
                      </div>
                      <div
                        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 css-1idn90j-MuiGrid-root"
                      >
                        <span
                          class="MuiTypography-root MuiTypography-caption css-1e4ju4k-MuiTypography-root"
                          data-testid="rek-content-indicator"
                          id="rek-content-indicator"
                        >
                          <div
                            class="MuiBox-root css-w4835h"
                          >
                            Content Indicators
                            :
                          </div>
                          Scholarship of Teaching and Learning, Protocol
                        </span>
                      </div>
                    </div>
                  </div>
                  <hr
                    class="MuiDivider-root MuiDivider-fullWidth css-imddhh-MuiDivider-root"
                  />
                </div>
                <field
                  is="mock"
                  label="Select an action"
                  name="fixAction"
                  required="true"
                />
              </div>
            </div>
          </div>
          <div />
          <div
            class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-xs-12 css-16fnxy3-MuiGrid2-root"
          >
            <div
              class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root StandardCard css-985319-MuiPaper-root-MuiCard-root"
              data-testid="standard-card-suggest-a-correction"
              id="standard-card-suggest-a-correction"
            >
              <div
                class="MuiCardHeader-root css-16c6n48-MuiCardHeader-root"
              >
                <div
                  class="MuiCardHeader-content css-1qbkelo-MuiCardHeader-content"
                >
                  <h3
                    class="MuiTypography-root MuiTypography-h5 MuiCardHeader-title css-1hzv55z-MuiTypography-root"
                    data-testid="standard-card-suggest-a-correction-header"
                    id="standard-card-suggest-a-correction-header"
                  >
                    Suggest a correction
                  </h3>
                </div>
              </div>
              <div
                class="MuiCardContent-root css-46bh2p-MuiCardContent-root"
                data-analyticsid="standard-card-suggest-a-correction-content"
                data-testid="standard-card-suggest-a-correction-content"
                id="standard-card-suggest-a-correction-content"
              >
                <div
                  class="MuiGrid2-root MuiGrid2-container MuiGrid2-direction-xs-row MuiGrid2-spacing-xs-2 css-ckkhel-MuiGrid2-root"
                >
                  <div
                    class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-xs-12 css-16fnxy3-MuiGrid2-root"
                  >
                    <field
                      is="mock"
                      label="Type changes or comments here"
                      name="comments"
                    />
                  </div>
                  <div
                    class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-xs-12 css-16fnxy3-MuiGrid2-root"
                  >
                    <field
                      is="mock"
                      label="Link (URL)"
                      name="rek_link"
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-xs-12 css-16fnxy3-MuiGrid2-root"
          >
            <div
              class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root StandardCard css-985319-MuiPaper-root-MuiCard-root"
              data-testid="standard-card-optional:-content-indicators"
              id="standard-card-optional:-content-indicators"
            >
              <div
                class="MuiCardHeader-root css-16c6n48-MuiCardHeader-root"
              >
                <div
                  class="MuiCardHeader-content css-1qbkelo-MuiCardHeader-content"
                >
                  <h3
                    class="MuiTypography-root MuiTypography-h5 MuiCardHeader-title css-1hzv55z-MuiTypography-root"
                    data-testid="standard-card-optional:-content-indicators-header"
                    id="standard-card-optional:-content-indicators-header"
                  >
                    Optional: Content Indicators
                  </h3>
                </div>
                <div
                  class="MuiCardHeader-action css-sgoict-MuiCardHeader-action"
                >
                  <button
                    aria-label="Click for more information"
                    class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeMedium css-whz9ym-MuiButtonBase-root-MuiIconButton-root"
                    data-analyticsid="help-icon"
                    data-mui-internal-clone-element="true"
                    data-testid="help-icon"
                    id="help-icon"
                    tabindex="0"
                    type="button"
                  >
                    <svg
                      class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-16iszhv-MuiSvgIcon-root"
                      data-testid="HelpOutlineIcon"
                      focusable="false"
                      role="img"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M11 18h2v-2h-2v2zm1-16C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.41 0-8-3.59-8-8s3.59-8 8-8 8 3.59 8 8-3.59 8-8 8zm0-14c-2.21 0-4 1.79-4 4h2c0-1.1.9-2 2-2s2 .9 2 2c0 2-3 1.75-3 5h2c0-2.25 3-2.5 3-5 0-2.21-1.79-4-4-4z"
                      />
                      <title>
                        Click for more information
                      </title>
                    </svg>
                    <span
                      class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                    />
                  </button>
                </div>
              </div>
              <div
                class="MuiCardContent-root css-46bh2p-MuiCardContent-root"
                data-analyticsid="standard-card-optional:-content-indicators-content"
                data-testid="standard-card-optional:-content-indicators-content"
                id="standard-card-optional:-content-indicators-content"
              >
                <div
                  class="MuiGrid2-root MuiGrid2-container MuiGrid2-direction-xs-row MuiGrid2-spacing-xs-3 css-3yz84k-MuiGrid2-root"
                >
                  <div
                    class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-xs-12 css-16fnxy3-MuiGrid2-root"
                  >
                    <p
                      class="MuiTypography-root MuiTypography-body1 css-u1nwny-MuiTypography-root"
                    >
                      If relevant to your work, you can select multiple content indicators to add more information about your work, but you cannot remove indicators already selected. To amend existing information, Suggest a correction above.
                    </p>
                  </div>
                  <div
                    class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-xs-12 css-16fnxy3-MuiGrid2-root"
                  >
                    <field
                      is="mock"
                      label="Add any relevant indicator(s)."
                      name="contentIndicators"
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-xs-12 css-16fnxy3-MuiGrid2-root"
          >
            <div
              class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root StandardCard css-985319-MuiPaper-root-MuiCard-root"
              data-testid="standard-card-upload-files"
              id="standard-card-upload-files"
            >
              <div
                class="MuiCardHeader-root css-16c6n48-MuiCardHeader-root"
              >
                <div
                  class="MuiCardHeader-content css-1qbkelo-MuiCardHeader-content"
                >
                  <h3
                    class="MuiTypography-root MuiTypography-h5 MuiCardHeader-title css-1hzv55z-MuiTypography-root"
                    data-testid="standard-card-upload-files-header"
                    id="standard-card-upload-files-header"
                  >
                    Upload files
                  </h3>
                </div>
              </div>
              <div
                class="MuiCardContent-root css-46bh2p-MuiCardContent-root"
                data-analyticsid="standard-card-upload-files-content"
                data-testid="standard-card-upload-files-content"
                id="standard-card-upload-files-content"
              >
                <div>
                  Upload an Open Access file, HERDC evidence or an NTRO Research Statement
                </div>
                <field
                  is="mock"
                  name="files"
                />
              </div>
            </div>
          </div>
        </div>
        <div
          class="MuiGrid2-root MuiGrid2-container MuiGrid2-direction-xs-row MuiGrid2-spacing-xs-3 css-dkd71f-MuiGrid2-root"
        >
          <div
            class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-xs-true css-1gtgtdn-MuiGrid2-root"
          />
          <div
            class="MuiGrid2-root MuiGrid2-direction-xs-row css-27y2fm-MuiGrid2-root"
          >
            <button
              class="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedDefault MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-fullWidth MuiButton-root MuiButton-contained MuiButton-containedDefault MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-fullWidth css-1j7u7t2-MuiButtonBase-root-MuiButton-root"
              tabindex="0"
              type="button"
            >
              Cancel
              <span
                class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
              />
            </button>
          </div>
          <div
            class="MuiGrid2-root MuiGrid2-direction-xs-row css-27y2fm-MuiGrid2-root"
          >
            <button
              class="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-fullWidth MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-fullWidth css-1duotrm-MuiButtonBase-root-MuiButton-root"
              data-analyticsid="fixSubmit"
              data-testid="fix-submit"
              id="fixSubmit"
              tabindex="0"
              type="button"
            >
              Submit
              <span
                class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
              />
            </button>
          </div>
        </div>
      </form>
    </div>
  </div>
</div>
`;

exports[`Component FixRecord should render loader when author is loading 1`] = `
<div>
  <div
    style="padding: 8px;"
  >
    <div
      class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-1 css-qiawb8-MuiGrid-root"
    >
      <div
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-true css-5os2wf-MuiGrid-root"
      />
      <div
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-auto css-1wrgmsj-MuiGrid-root"
        style="text-align: center;"
      >
        <span
          aria-label="Loading"
          class="MuiCircularProgress-root MuiCircularProgress-indeterminate MuiCircularProgress-colorPrimary css-u4ps4u-MuiCircularProgress-root"
          role="progressbar"
          style="width: 18px; height: 18px;"
        >
          <svg
            class="MuiCircularProgress-svg css-1idz92c-MuiCircularProgress-svg"
            viewBox="22 22 44 44"
          >
            <circle
              class="MuiCircularProgress-circle MuiCircularProgress-circleIndeterminate css-176wh8e-MuiCircularProgress-circle"
              cx="44"
              cy="44"
              fill="none"
              r="21"
              stroke-width="2"
            />
          </svg>
        </span>
      </div>
      <div
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-auto css-1wrgmsj-MuiGrid-root"
        style="text-align: center;"
      >
        <span
          class="MuiTypography-root MuiTypography-h5 css-1q4fwm5-MuiTypography-root"
          style="font-size: 1.33rem;"
        >
          Loading work
        </span>
      </div>
      <div
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-true css-5os2wf-MuiGrid-root"
      />
    </div>
  </div>
</div>
`;

exports[`Component FixRecord should render loader when record is loading 1`] = `
<div>
  <div
    style="padding: 8px;"
  >
    <div
      class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-1 css-qiawb8-MuiGrid-root"
    >
      <div
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-true css-5os2wf-MuiGrid-root"
      />
      <div
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-auto css-1wrgmsj-MuiGrid-root"
        style="text-align: center;"
      >
        <span
          aria-label="Loading"
          class="MuiCircularProgress-root MuiCircularProgress-indeterminate MuiCircularProgress-colorPrimary css-u4ps4u-MuiCircularProgress-root"
          role="progressbar"
          style="width: 18px; height: 18px;"
        >
          <svg
            class="MuiCircularProgress-svg css-1idz92c-MuiCircularProgress-svg"
            viewBox="22 22 44 44"
          >
            <circle
              class="MuiCircularProgress-circle MuiCircularProgress-circleIndeterminate css-176wh8e-MuiCircularProgress-circle"
              cx="44"
              cy="44"
              fill="none"
              r="21"
              stroke-width="2"
            />
          </svg>
        </span>
      </div>
      <div
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-auto css-1wrgmsj-MuiGrid-root"
        style="text-align: center;"
      >
        <span
          class="MuiTypography-root MuiTypography-h5 css-1q4fwm5-MuiTypography-root"
          style="font-size: 1.33rem;"
        >
          Loading work
        </span>
      </div>
      <div
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-true css-5os2wf-MuiGrid-root"
      />
    </div>
  </div>
</div>
`;

exports[`Component FixRecord should render record citation, two actions in select field and a cancel button 1`] = `
<div>
  <div
    class="MuiGrid-root MuiGrid-container StandardPage css-11lq3yg-MuiGrid-root"
  >
    <div
      class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-true css-1vd824g-MuiGrid-root"
    >
      <h2
        class="MuiTypography-root MuiTypography-body1 css-v2c8i0-MuiTypography-root"
        data-analyticsid="page-title"
        data-testid="page-title"
        id="page-title"
      >
        Request a correction, add more information or upload files
      </h2>
    </div>
    <div
      class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 css-1idn90j-MuiGrid-root"
    />
    <div
      class="MuiGrid-root MuiGrid-item css-1guqyqn-MuiGrid-root"
    >
      <form>
        <div
          class="MuiGrid2-root MuiGrid2-container MuiGrid2-direction-xs-row MuiGrid2-spacing-xs-3 css-dkd71f-MuiGrid2-root"
        >
          <div
            class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-xs-12 css-16fnxy3-MuiGrid2-root"
          >
            <div
              class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root StandardCard css-985319-MuiPaper-root-MuiCard-root"
              data-testid="standard-card-work-to-be-amended"
              id="standard-card-work-to-be-amended"
            >
              <div
                class="MuiCardHeader-root css-16c6n48-MuiCardHeader-root"
              >
                <div
                  class="MuiCardHeader-content css-1qbkelo-MuiCardHeader-content"
                >
                  <h3
                    class="MuiTypography-root MuiTypography-h5 MuiCardHeader-title css-1hzv55z-MuiTypography-root"
                    data-testid="standard-card-work-to-be-amended-header"
                    id="standard-card-work-to-be-amended-header"
                  >
                    Work to be amended
                  </h3>
                </div>
              </div>
              <div
                class="MuiCardContent-root css-46bh2p-MuiCardContent-root"
                data-analyticsid="standard-card-work-to-be-amended-content"
                data-testid="standard-card-work-to-be-amended-content"
                id="standard-card-work-to-be-amended-content"
              >
                <div
                  class="publicationCitation"
                >
                  <div
                    class="css-0"
                    data-testid="publication-citation-parent-UQ:41878"
                    id="publication-citation-parent-UQ:41878"
                  >
                    <div
                      class="MuiGrid-root MuiGrid-container css-11lq3yg-MuiGrid-root"
                    >
                      <div
                        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-true css-1vd824g-MuiGrid-root"
                      >
                        <div
                          class="MuiGrid-root MuiGrid-container css-11lq3yg-MuiGrid-root"
                        >
                          <div
                            class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-true css-1vd824g-MuiGrid-root"
                            style="min-width: 1px;"
                          >
                            <h6
                              class="MuiTypography-root MuiTypography-h6 PublicationCitation-citationTitle css-nleb5q-MuiTypography-root"
                            >
                              <a
                                href="/view/UQ:41878"
                              >
                                Roles of heterogeneous nuclear ribonucleoproteins A/B in cell growth
                              </a>
                            </h6>
                          </div>
                          <div
                            class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 css-1ixyqi5-MuiGrid-root"
                          >
                            <div
                              class="citationContent citationJournalArticle"
                            >
                              <span
                                class="citationAuthors"
                              >
                                
                                <span
                                  class="citationAuthor"
                                  data-testid="rek-author-0"
                                >
                                  
                                  Brown, M. A.
                                  
                                </span>
                                , 
                                
                                <span
                                  class="citationAuthor"
                                  data-testid="rek-author-1"
                                >
                                  
                                  He, Y.
                                  
                                </span>
                                , 
                                
                                <span
                                  class="citationAuthor"
                                  data-testid="rek-author-2"
                                >
                                  
                                  Rothnagel, J. A.
                                  
                                </span>
                                , 
                                
                                <span
                                  class="citationAuthor"
                                  data-testid="rek-author-3"
                                >
                                  
                                  Saunders, N. A.
                                  
                                </span>
                                , 
                                 and 
                                <span
                                  class="citationAuthor"
                                  data-testid="rek-author-4"
                                >
                                  
                                  Smith, R.
                                  
                                </span>
                                
                                 
                              </span>
                              <span
                                class="citationDate"
                              >
                                (
                                2004
                                ).
                              </span>
                              <span
                                class="citationTitle"
                              >
                                 
                                Roles of heterogeneous nuclear ribonucleoproteins A/B in cell growth
                                .
                              </span>
                              <span
                                class="citationJournalName"
                              >
                                 
                                Molecular Biology of The Cell
                                 
                              </span>
                              <span
                                class="citationVolumeNumber"
                              >
                                 
                                15
                                 
                              </span>
                              <span
                                class="citationIssueNumber empty"
                              />
                              <span
                                class="citationArticleNumber empty"
                              />
                              <span
                                class="citationPageRange"
                              >
                                
                                <span
                                  class="citationStartPage"
                                >
                                  252A
                                </span>
                                -
                                <span
                                  class="citationEndPage"
                                >
                                  253A
                                </span>
                                
                              </span>
                              <span>
                                . 
                              </span>
                              <span
                                class="citationDOI empty"
                              />
                            </div>
                          </div>
                          <div
                            class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 css-1idn90j-MuiGrid-root"
                          >
                            <div
                              class="MuiGrid-root MuiGrid-container css-1vam7s3-MuiGrid-root"
                            >
                              <div
                                class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-auto css-1lugyxr-MuiGrid-root"
                              >
                                <div
                                  class="MuiGrid-root MuiGrid-container css-11lq3yg-MuiGrid-root"
                                >
                                  <div
                                    class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-auto css-pr9bjb-MuiGrid-root"
                                  >
                                    <a
                                      aria-label="Full citation in Web of science will open in a new window"
                                      class="wosCitationCount css-si3g8d"
                                      data-analyticsid="citation-count-link"
                                      data-testid="citation-count-link"
                                      href="https://www.webofknowledge.com/?auth=ShibbolethIdPForm&entityID=https://idp.uq.edu.au/entity&ShibFederation=OpenAthensFederation&DestApp=WOS&target=https%253A%252F%252Fwww.webofscience.com%252Fapi%252Fgateway%253FGWVersion%253D2%2526SrcAuth%253Duqueensland%2526SrcApp%253Dresolve1%2526DestLinkType%253DFullRecord%2526DestApp%253DWOS_CPL%2526KeyUT%253D000224648802120"
                                      id="citation-count-link"
                                      rel="noopener noreferrer"
                                      tabindex="0"
                                      target="_blank"
                                      title="Full citation in Web of science will open in a new window"
                                    >
                                      <span
                                        class="fez-icon wos large"
                                      />
                                      <span
                                        class="MuiBox-root css-19k1sqg"
                                      >
                                        2
                                      </span>
                                    </a>
                                    <a
                                      aria-label="Full citation in Google scholar will open in a new window"
                                      class="googleCitationCount css-si3g8d"
                                      data-analyticsid="citation-count-link"
                                      data-testid="citation-count-link"
                                      href="https://scholar.google.com/scholar?q=intitle:Roles%20of%20heterogeneous%20nuclear%20ribonucleoproteins%20A/B%20in%20cell%20growth"
                                      id="citation-count-link"
                                      rel="noopener noreferrer"
                                      tabindex="0"
                                      target="_blank"
                                      title="Full citation in Google scholar will open in a new window"
                                    >
                                      <span
                                        class="fez-icon google large"
                                      />
                                    </a>
                                    <span
                                      class="noOaIcon"
                                      data-testid="oa-n/a-icon"
                                    />
                                  </div>
                                  <div
                                    class="MuiGrid-root MuiGrid-item css-13i4rnv-MuiGrid-root"
                                  />
                                  <div
                                    class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-true css-j9fe35-MuiGrid-root"
                                  />
                                </div>
                              </div>
                            </div>
                          </div>
                        </div>
                      </div>
                      <div
                        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 css-1idn90j-MuiGrid-root"
                      >
                        <span
                          class="MuiTypography-root MuiTypography-caption css-1e4ju4k-MuiTypography-root"
                          data-testid="rek-content-indicator"
                          id="rek-content-indicator"
                        >
                          <div
                            class="MuiBox-root css-w4835h"
                          >
                            Content Indicators
                            :
                          </div>
                          Scholarship of Teaching and Learning, Protocol
                        </span>
                      </div>
                    </div>
                  </div>
                  <hr
                    class="MuiDivider-root MuiDivider-fullWidth css-imddhh-MuiDivider-root"
                  />
                </div>
                <field
                  is="mock"
                  label="Select an action"
                  name="fixAction"
                  required="true"
                />
              </div>
            </div>
          </div>
        </div>
        <div
          class="MuiGrid2-root MuiGrid2-container MuiGrid2-direction-xs-row MuiGrid2-spacing-xs-3 css-dkd71f-MuiGrid2-root"
        >
          <div
            class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-xs-true css-1gtgtdn-MuiGrid2-root"
          />
          <div
            class="MuiGrid2-root MuiGrid2-direction-xs-row css-27y2fm-MuiGrid2-root"
          >
            <button
              class="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedDefault MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-fullWidth MuiButton-root MuiButton-contained MuiButton-containedDefault MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-fullWidth css-1j7u7t2-MuiButtonBase-root-MuiButton-root"
              tabindex="0"
              type="button"
            >
              Cancel
              <span
                class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
              />
            </button>
          </div>
          
        </div>
      </form>
    </div>
  </div>
</div>
`;

exports[`Component FixRecord should render unclaim form 1`] = `
<div>
  <div
    class="MuiGrid-root MuiGrid-container StandardPage css-11lq3yg-MuiGrid-root"
  >
    <div
      class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-true css-1vd824g-MuiGrid-root"
    >
      <h2
        class="MuiTypography-root MuiTypography-body1 css-v2c8i0-MuiTypography-root"
        data-analyticsid="page-title"
        data-testid="page-title"
        id="page-title"
      >
        Request a correction, add more information or upload files
      </h2>
    </div>
    <div
      class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 css-1idn90j-MuiGrid-root"
    />
    <div
      class="MuiGrid-root MuiGrid-item css-1guqyqn-MuiGrid-root"
    >
      <form>
        <div
          class="MuiGrid2-root MuiGrid2-container MuiGrid2-direction-xs-row MuiGrid2-spacing-xs-3 css-dkd71f-MuiGrid2-root"
        >
          <div
            class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-xs-12 css-16fnxy3-MuiGrid2-root"
          >
            <div
              class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root StandardCard css-985319-MuiPaper-root-MuiCard-root"
              data-testid="standard-card-work-to-be-amended"
              id="standard-card-work-to-be-amended"
            >
              <div
                class="MuiCardHeader-root css-16c6n48-MuiCardHeader-root"
              >
                <div
                  class="MuiCardHeader-content css-1qbkelo-MuiCardHeader-content"
                >
                  <h3
                    class="MuiTypography-root MuiTypography-h5 MuiCardHeader-title css-1hzv55z-MuiTypography-root"
                    data-testid="standard-card-work-to-be-amended-header"
                    id="standard-card-work-to-be-amended-header"
                  >
                    Work to be amended
                  </h3>
                </div>
              </div>
              <div
                class="MuiCardContent-root css-46bh2p-MuiCardContent-root"
                data-analyticsid="standard-card-work-to-be-amended-content"
                data-testid="standard-card-work-to-be-amended-content"
                id="standard-card-work-to-be-amended-content"
              >
                <div
                  class="publicationCitation"
                >
                  <div
                    class="css-0"
                    data-testid="publication-citation-parent-UQ:41878"
                    id="publication-citation-parent-UQ:41878"
                  >
                    <div
                      class="MuiGrid-root MuiGrid-container css-11lq3yg-MuiGrid-root"
                    >
                      <div
                        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-true css-1vd824g-MuiGrid-root"
                      >
                        <div
                          class="MuiGrid-root MuiGrid-container css-11lq3yg-MuiGrid-root"
                        >
                          <div
                            class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-true css-1vd824g-MuiGrid-root"
                            style="min-width: 1px;"
                          >
                            <h6
                              class="MuiTypography-root MuiTypography-h6 PublicationCitation-citationTitle css-nleb5q-MuiTypography-root"
                            >
                              <a
                                href="/view/UQ:41878"
                              >
                                Roles of heterogeneous nuclear ribonucleoproteins A/B in cell growth
                              </a>
                            </h6>
                          </div>
                          <div
                            class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 css-1ixyqi5-MuiGrid-root"
                          >
                            <div
                              class="citationContent citationJournalArticle"
                            >
                              <span
                                class="citationAuthors"
                              >
                                
                                <span
                                  class="citationAuthor"
                                  data-testid="rek-author-0"
                                >
                                  
                                  Brown, M. A.
                                  
                                </span>
                                , 
                                
                                <span
                                  class="citationAuthor"
                                  data-testid="rek-author-1"
                                >
                                  
                                  He, Y.
                                  
                                </span>
                                , 
                                
                                <span
                                  class="citationAuthor"
                                  data-testid="rek-author-2"
                                >
                                  
                                  Rothnagel, J. A.
                                  
                                </span>
                                , 
                                
                                <span
                                  class="citationAuthor"
                                  data-testid="rek-author-3"
                                >
                                  
                                  Saunders, N. A.
                                  
                                </span>
                                , 
                                 and 
                                <span
                                  class="citationAuthor"
                                  data-testid="rek-author-4"
                                >
                                  
                                  Smith, R.
                                  
                                </span>
                                
                                 
                              </span>
                              <span
                                class="citationDate"
                              >
                                (
                                2004
                                ).
                              </span>
                              <span
                                class="citationTitle"
                              >
                                 
                                Roles of heterogeneous nuclear ribonucleoproteins A/B in cell growth
                                .
                              </span>
                              <span
                                class="citationJournalName"
                              >
                                 
                                Molecular Biology of The Cell
                                 
                              </span>
                              <span
                                class="citationVolumeNumber"
                              >
                                 
                                15
                                 
                              </span>
                              <span
                                class="citationIssueNumber empty"
                              />
                              <span
                                class="citationArticleNumber empty"
                              />
                              <span
                                class="citationPageRange"
                              >
                                
                                <span
                                  class="citationStartPage"
                                >
                                  252A
                                </span>
                                -
                                <span
                                  class="citationEndPage"
                                >
                                  253A
                                </span>
                                
                              </span>
                              <span>
                                . 
                              </span>
                              <span
                                class="citationDOI empty"
                              />
                            </div>
                          </div>
                          <div
                            class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 css-1idn90j-MuiGrid-root"
                          >
                            <div
                              class="MuiGrid-root MuiGrid-container css-1vam7s3-MuiGrid-root"
                            >
                              <div
                                class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-auto css-1lugyxr-MuiGrid-root"
                              >
                                <div
                                  class="MuiGrid-root MuiGrid-container css-11lq3yg-MuiGrid-root"
                                >
                                  <div
                                    class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-auto css-pr9bjb-MuiGrid-root"
                                  >
                                    <a
                                      aria-label="Full citation in Web of science will open in a new window"
                                      class="wosCitationCount css-si3g8d"
                                      data-analyticsid="citation-count-link"
                                      data-testid="citation-count-link"
                                      href="https://www.webofknowledge.com/?auth=ShibbolethIdPForm&entityID=https://idp.uq.edu.au/entity&ShibFederation=OpenAthensFederation&DestApp=WOS&target=https%253A%252F%252Fwww.webofscience.com%252Fapi%252Fgateway%253FGWVersion%253D2%2526SrcAuth%253Duqueensland%2526SrcApp%253Dresolve1%2526DestLinkType%253DFullRecord%2526DestApp%253DWOS_CPL%2526KeyUT%253D000224648802120"
                                      id="citation-count-link"
                                      rel="noopener noreferrer"
                                      tabindex="0"
                                      target="_blank"
                                      title="Full citation in Web of science will open in a new window"
                                    >
                                      <span
                                        class="fez-icon wos large"
                                      />
                                      <span
                                        class="MuiBox-root css-19k1sqg"
                                      >
                                        2
                                      </span>
                                    </a>
                                    <a
                                      aria-label="Full citation in Google scholar will open in a new window"
                                      class="googleCitationCount css-si3g8d"
                                      data-analyticsid="citation-count-link"
                                      data-testid="citation-count-link"
                                      href="https://scholar.google.com/scholar?q=intitle:Roles%20of%20heterogeneous%20nuclear%20ribonucleoproteins%20A/B%20in%20cell%20growth"
                                      id="citation-count-link"
                                      rel="noopener noreferrer"
                                      tabindex="0"
                                      target="_blank"
                                      title="Full citation in Google scholar will open in a new window"
                                    >
                                      <span
                                        class="fez-icon google large"
                                      />
                                    </a>
                                    <span
                                      class="noOaIcon"
                                      data-testid="oa-n/a-icon"
                                    />
                                  </div>
                                  <div
                                    class="MuiGrid-root MuiGrid-item css-13i4rnv-MuiGrid-root"
                                  />
                                  <div
                                    class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-true css-j9fe35-MuiGrid-root"
                                  />
                                </div>
                              </div>
                            </div>
                          </div>
                        </div>
                      </div>
                      <div
                        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 css-1idn90j-MuiGrid-root"
                      >
                        <span
                          class="MuiTypography-root MuiTypography-caption css-1e4ju4k-MuiTypography-root"
                          data-testid="rek-content-indicator"
                          id="rek-content-indicator"
                        >
                          <div
                            class="MuiBox-root css-w4835h"
                          >
                            Content Indicators
                            :
                          </div>
                          Scholarship of Teaching and Learning, Protocol
                        </span>
                      </div>
                    </div>
                  </div>
                  <hr
                    class="MuiDivider-root MuiDivider-fullWidth css-imddhh-MuiDivider-root"
                  />
                </div>
                <field
                  is="mock"
                  label="Select an action"
                  name="fixAction"
                  required="true"
                />
              </div>
            </div>
          </div>
          <div
            class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-xs-12 css-16fnxy3-MuiGrid2-root"
          >
            <div
              class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root StandardCard css-985319-MuiPaper-root-MuiCard-root"
              data-testid="standard-card-remove-this-work-from-my-profile"
              id="standard-card-remove-this-work-from-my-profile"
            >
              <div
                class="MuiCardHeader-root css-16c6n48-MuiCardHeader-root"
              >
                <div
                  class="MuiCardHeader-content css-1qbkelo-MuiCardHeader-content"
                >
                  <h3
                    class="MuiTypography-root MuiTypography-h5 MuiCardHeader-title css-1hzv55z-MuiTypography-root"
                    data-testid="standard-card-remove-this-work-from-my-profile-header"
                    id="standard-card-remove-this-work-from-my-profile-header"
                  >
                    Remove this work from my profile
                  </h3>
                </div>
              </div>
              <div
                class="MuiCardContent-root css-46bh2p-MuiCardContent-root"
                data-analyticsid="standard-card-remove-this-work-from-my-profile-content"
                data-testid="standard-card-remove-this-work-from-my-profile-content"
                id="standard-card-remove-this-work-from-my-profile-content"
              >
                <div
                  data-testid="alert"
                  style="margin-top: 5px;"
                >
                  <div
                    class="MuiGrid-root MuiGrid-container css-17z5iqr-MuiGrid-root"
                  >
                    <div
                      class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-true css-cyocdy-MuiGrid-root"
                    >
                      <div
                        class="MuiGrid-root MuiGrid-container css-1k6h6af-MuiGrid-root"
                      >
                        <div
                          class="MuiGrid-root MuiGrid-item alert-icon css-sco6ic-MuiGrid-root"
                        >
                          <svg
                            aria-hidden="true"
                            class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium icon css-i4bv87-MuiSvgIcon-root"
                            data-testid="WarningIcon"
                            focusable="false"
                            id="warning-icon"
                            viewBox="0 0 24 24"
                          >
                            <path
                              d="M1 21h22L12 2 1 21zm12-3h-2v-2h2v2zm0-4h-2v-4h2v4z"
                            />
                          </svg>
                        </div>
                        <div
                          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-true alert-text css-1ux0ax1-MuiGrid-root"
                        >
                          <b>
                            WARNING - 
                          </b>
                          You are about to remove this work from your eSpace profile.
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                
              </div>
            </div>
          </div>
        </div>
        <div
          class="MuiGrid2-root MuiGrid2-container MuiGrid2-direction-xs-row MuiGrid2-spacing-xs-3 css-dkd71f-MuiGrid2-root"
        >
          <div
            class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-xs-true css-1gtgtdn-MuiGrid2-root"
          />
          <div
            class="MuiGrid2-root MuiGrid2-direction-xs-row css-27y2fm-MuiGrid2-root"
          >
            <button
              class="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedDefault MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-fullWidth MuiButton-root MuiButton-contained MuiButton-containedDefault MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-fullWidth css-1j7u7t2-MuiButtonBase-root-MuiButton-root"
              tabindex="0"
              type="button"
            >
              Cancel
              <span
                class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
              />
            </button>
          </div>
          <div
            class="MuiGrid2-root MuiGrid2-direction-xs-row css-27y2fm-MuiGrid2-root"
          >
            <button
              class="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-fullWidth MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-fullWidth css-1duotrm-MuiButtonBase-root-MuiButton-root"
              data-analyticsid="fixSubmit"
              data-testid="fix-submit"
              id="fixSubmit"
              tabindex="0"
              type="button"
            >
              Submit
            </button>
          </div>
        </div>
      </form>
    </div>
  </div>
</div>
`;
